avoid port conflicts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,8 +95,8 @@ services:
       - langfuse_clickhouse_data:/var/lib/clickhouse
       - langfuse_clickhouse_logs:/var/log/clickhouse-server
     ports:
-      - 127.0.0.1:8123:8123
-      - 127.0.0.1:9000:9000
+      - 127.0.0.1:7123:8123
+      - 127.0.0.1:7000:9000
     healthcheck:
       test: wget --no-verbose --tries=1 --spider http://localhost:8123/ping || exit 1
       interval: 5s
@@ -114,8 +114,8 @@ services:
       MINIO_ROOT_USER: minio
       MINIO_ROOT_PASSWORD: miniosecret # CHANGEME
     ports:
-      - 9090:9000
-      - 127.0.0.1:9091:9001
+      - 7090:9000
+      - 127.0.0.1:7091:9001
     volumes:
       - langfuse_minio_data:/data
     healthcheck:
@@ -132,7 +132,7 @@ services:
     command: >
       --requirepass ${REDIS_AUTH:-myredissecret}
     ports:
-      - 127.0.0.1:6379:6379
+      - 127.0.0.1:63790:6379
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 3s
@@ -152,7 +152,7 @@ services:
       POSTGRES_PASSWORD: postgres # CHANGEME
       POSTGRES_DB: postgres
     ports:
-      - 127.0.0.1:5432:5432
+      - 127.0.0.1:54320:5432
     volumes:
       - langfuse_postgres_data:/var/lib/postgresql/data
 
@@ -165,3 +165,9 @@ volumes:
     driver: local
   langfuse_minio_data:
     driver: local
+
+# networks:
+#   default:
+#     driver: bridge
+#     driver_opts:
+#       com.docker.compose.network: "default"
